# File-sharing-app

./: launch.ps1  package-lock.json  package.json
.VSCodeCounter/2023-04-22_22-04-29/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-23_19-53-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-24_22-00-42/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-26_15-17-43/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-26_19-30-45/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-26_22-28-53/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-27_15-48-18/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  (+2 more)
src/: App.css  App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: client.rs  config.rs  data.rs  listen.rs  main.rs  mdns.rs  network.rs  peer_id.rs  server.rs  window.rs
src-tauri/src/client/: codec.rs  protobuf.rs
src-tauri/src/network/: client.rs  client_handle.rs  codec.rs  listener.rs  mdns.rs  peer_id.rs  server.rs  server_handle.rs  tcp_listener.rs
src-tauri/src/network/codec/: protobuf_map.rs  tcpMessages.proto
src-tauri/src/window/: commands.rs
test/: test.js
(+318 files in other folders)
