[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["window-close", "window-hide", "window-maximize", "window-minimize", "window-set-focus", "window-set-resizable", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
window-shadows = "0.2.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
sha256 = "1.1.2"
platform-dirs = "0.3.0"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }
thiserror = "1.0.40"
mdns-sd = "0.5.10"
hostname = "0.3.1"
futures = "0.3.28"
anyhow = "1.0.70"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
bytes = { version = "1.4.0", features = ["serde"] }
postcard = { version = "1.0.4", features = ["use-std"] }
if-addrs = "0.10.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
